--- a/table.html
+++ b/table.html
@@ -4,58 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Periodic Table</title>
-  <style>
-    body {
-      background-color: #111;
-      color: white;
-      font-family: Arial, sans-serif;
-    }
-    h1 {
-      text-align: center;
-      color: white;
-    }
-    table {
-      border-collapse: 1px;
-      margin: 10px auto;
-    }
-    td {
-      text-align: center;
-      color: white;
-      border: none;
-      padding: 8px;
-      width: 70px;
-      height: 70px;
-      border-radius: 15px;
-    }
-    td b {
-      font-size: 20px;
-      font-weight: bold;
-      display: block;
-    }
-    td span {
-      font-size: 12px;
-      display: block;
-    }
-    td small {
-      font-size: 10px;
-      display: block;
-    }
-    
-  </style>
+  <link rel="stylesheet" href="./table.css">
 </head>
 <body>
 <h1>Periodic Table of Elements</h1>
 
 <table cellspacing="5" cellpadding="8">
 
-<!-- Row 1 -->
 <tr>
   <td bgcolor="#ff8800"><small>1</small><b>H</b><span>Hydrogen</span></td>
   <td colspan="16"></td>
   <td bgcolor="#00b4d8"><small>2</small><b>He</b><span>Helium</span></td>
 </tr>
 
-<!-- Row 2 -->
 <tr>
   <td bgcolor="#0077b6"><small>3</small><b>Li</b><span>Lithium</span></td>
   <td bgcolor="purple"><small>4</small><b>Be</b><span>Beryllium</span></td>
@@ -68,7 +29,7 @@
   <td bgcolor="#ff006e"><small>10</small><b>Ne</b><span>Neon</span></td>
 </tr>
 
-<!-- Row 3 -->
+
 <tr>
   <td bgcolor="#0077b6"><small>11</small><b>Na</b><span>Sodium</span></td>
   <td bgcolor="purple"><small>12</small><b>Mg</b><span>Magnesium</span></td>
@@ -81,7 +42,7 @@
   <td bgcolor="#ff006e"><small>18</small><b>Ar</b><span>Argon</span></td>
 </tr>
 
-<!-- Row 4 -->
+
 <tr>
   <td bgcolor="#0077b6"><small>19</small><b>K</b><span>Potassium</span></td>
   <td bgcolor="purple"><small>20</small><b>Ca</b><span>Calcium</span></td>
@@ -102,7 +63,7 @@
   <td bgcolor="#ff8800"><small>35</small><b>Br</b><span>Bromine</span></td>
   <td bgcolor="#ff006e"><small>36</small><b>Kr</b><span>Krypton</span></td>
 </tr>
-<!-- Row 5 -->
+
 <tr>
   <td bgcolor="#0077b6"><small>37</small><b>Rb</b><span>Rubidium</span></td>
   <td bgcolor="purple"><small>38</small><b>Sr</b><span>Strontium</span></td>
@@ -124,7 +85,6 @@
   <td bgcolor="#ff006e"><small>54</small><b>Xe</b><span>Xenon</span></td>
 </tr>
 
-<!-- Row 6 -->
 <tr>
   <td bgcolor="#0077b6"><small>55</small><b>Cs</b><span>Cesium</span></td>
   <td bgcolor="purple"><small>56</small><b>Ba</b><span>Barium</span></td>
@@ -146,7 +106,6 @@
   <td bgcolor="#ff006e"><small>86</small><b>Rn</b><span>Radon</span></td>
 </tr>
 
-<!-- Row 7 -->
 <tr>
   <td bgcolor="#0077b6"><small>87</small><b>Fr</b><span>Francium</span></td>
   <td bgcolor="purple"><small>88</small><b>Ra</b><span>Radium</span></td>
@@ -169,7 +128,6 @@
 </tr>
 </table>
 
-<!-- F Block -->
 <br>
 <table cellspacing="5" cellpadding="8">
 <tr>
