--- a/form.html
+++ b/form.html
@@ -3,18 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>     
-        form{
-            background-color: khaki;
-            text-align: center;padding-top: 5PX;
-            width: 400PX;
-            border-radius: 20px;}
-        input{
-            border: none;}
-        select{
-            border: none;}
-    </style>
+    <title>Form</title>
+    <link rel="stylesheet" href="./form.css">
 </head>
 <body>
     <center>
